--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -31,7 +31,7 @@
 </div>
 <h2>Testing your work</h2>
 <p>Don't worry, this isn't one of those things where you have to publish the site before you figure out what's going on! 
-<br/>I recommend installing a browser extension called <a href="https://socialsharepreview.com/" rel="external">Social Share Preview</a> to help you test that your items will show up properly. </p>
+<br/>I recommend installing a browser extension called <a href="https://socialsharepreview.com/" rel="external">Social Share Preview</a> to help you test that your items will show up properly. You can even run that browser extension on this page to verify that the information provided here works!</p>
 </main>
 <footer>
   <p><small>Made with ❤️ by <a href="https://github.com/melsumner" rel="external">Melanie Sumner</a>.</small></p>
