--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,10 +4,10 @@
   <h1>Meta Tags in an Ember App</h1>
 </header>
 <main id="main">
-  <h2>One Weird Trick</h2>
+  <h2>One weird trick...?</h2>
   <p>We have long been accustomed to not doing anything to an Ember app’s <code>index.html</code> file. However, there are a few times when it is okay to do, like setting up your site’s meta tags for sharing sites to social media, setting the default language code for your app, and other things.</p>
-  <p>That’s right; the one weird trick is that there is no trick! Examine this app’s code repository, and you’ll see the information right there in the <code>index.html</code> file.</p>
-  <h2>Sample Code</h2>
+  <p>That’s right; the one weird trick is that there is no trick! Examine this app’s <a href="https://github.com/ember-sample-apps/meta-tags/blob/main/app/index.html" rel="external">code repository</a>, and you’ll see the information right there in the <code>index.html</code> file.</p>
+  <h2>Sample code</h2>
   <p>Here is some sample code that you can copy and paste into your own <code>index.html</code>, filling in your details for each of the items that is blank.
   <br/>Some notes:</p>
   <ol>
