--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -49,14 +49,17 @@ pre {
   width: fit-content;
   max-width: 100%;
 }
-pre code { 
-  white-space: pre-wrap;
-  line-height: 1.75rem;
-}
 code {
   font-size: 1.125rem;
   line-height: 1.2;
+  background-color: lemonchiffon;
 }
+pre code { 
+  white-space: pre-wrap;
+  line-height: 1.75rem;
+  background-color: transparent;
+}
+
 
 footer {
   background-color:#033035; ;
