adding some media queries

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,7 +12,7 @@
   <br/>Some notes:</p>
   <ol>
     <li>Order seems to matter. The order in this guide seems to work.</li>
-    <li>Image URLs need to be a full URL (e.g., <code>https://yoursite.com/path/to/image.png</code>).</li>
+    <li>Image URLs need to be a full URL.</li>
     <li>If you try this and for some reason something fails, the file name of the image has to be changed.</li>
     <li>Make sure the files are the correct dimensions. At the time of this guide, it's 1600x900 for Twitter and 1200x630 for Facebook.</li>
   </ol>
