--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -6,7 +6,7 @@ body {
   color: black;
   display: grid;
   font-family: 'Sofia Sans', sans-serif;
-  font-size: 22px;
+  font-size: 18px;
   font-weight: normal;
   grid-template-columns: none;
   grid-template-rows: auto minmax(90vh, auto) auto;
@@ -17,7 +17,13 @@ body {
   min-height: 100%;
   padding: 0;
 }
+@media screen and (min-width:768px) {
+  body {
+    font-size: 22px;
+  }
+}
 header, main, footer {
+  width: 100%;
   max-width: 100%;
   padding-left: 2rem;
   padding-right: 2rem;
@@ -30,14 +36,38 @@ header > h1 {
   margin: 0;
   padding: 0;
   line-height: 1;
+  font-size: 1.5rem;
 }
+@media screen and (min-width:768px) {
+  header h1 {
+    font-size: 2rem;
+  }
+}
+
 h2 {
   color: #033035;
   margin-top: 2rem;
   margin-bottom: 0.25rem;
+  font-size: 1.25rem;
+}
+
+@media screen and (min-width:768px) {
+  h2 {
+    font-size: 1.5rem;
+  }
 }
 h2 + p {
   margin-top: 0;
+}
+
+@media screen and (min-width:768px) {
+  main p, main ol {
+    max-width: 85ch;
+  }
+}
+
+ol {
+  max-width: 100%;
 }
 pre {
   white-space: pre;
@@ -50,14 +80,21 @@ pre {
   max-width: 100%;
 }
 code {
-  font-size: 1.125rem;
+  font-size: 1rem;
   line-height: 1.2;
   background-color: lemonchiffon;
+  white-space: pre-wrap;
+}
+@media screen and (min-width:768px) {
+  code {
+    font-size: 1.125rem;
+  }
 }
 pre code { 
   white-space: pre-wrap;
   line-height: 1.75rem;
   background-color: transparent;
+  max-width: 100%;
 }
 
 
